fix output equation going out of screen
fix handling error while creating Equation struct

--- a/website/css/style.css
+++ b/website/css/style.css
@@ -226,13 +226,22 @@ header {
 .MathJax {
     font-size: max(13px, 2.15vh) !important;
 }
-.equation-container {
+.equation-container-1 {
     margin: 0;
     padding: 0;
     width: 100%;
     flex: 1 0 50px;
     display: flex;
     align-items: center;
+}
+.equation-container-2 {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    flex: 1;
+    display: flex;
+    align-items: center;
+    overflow: hidden;
 }
 .equation {
     margin: 0 5px 0 5px;
